Conform to JDK 21 (#8)