@@ -46,15 +46,15 @@ public class VectorOpComparison{
 /* vmovdqa %ymm0, (%rdi)       */ .vmovdqaRM(Register.YMM0, Register.RDI, OptionalInt.of(0))
 /* leave                       */ .leave()
 /* ret                         */ .ret()
-                                  .build();
+                                  .build(Linker.Option.isTrivial());
     }
     catch(PlatformException | UnsupportedPlatformException e){
       throw new RuntimeException(e);
     }
 
-    var alloc = SegmentAllocator.nativeAllocator(SegmentScope.auto());
-    srcSeg = alloc.allocate(32, 32);
-    destSeg = alloc.allocate(32, 32);
+    var arena = Arena.ofAuto();
+    srcSeg = arena.allocate(32, 32);
+    destSeg = arena.allocate(32, 32);
   }
 
   @Setup(Level.Iteration)
